// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initializing base assessment init action should init assessment data: init_assessment 1`] = `
Object {
  "preview": Object {
    "agileAssetsUrl": undefined,
    "agileAssignUrl": undefined,
    "allPages": Object {
      "1": Array [
        Object {
          "blockId": 1,
          "questions": Array [
            1,
          ],
        },
        Object {
          "blockId": 1,
          "questions": Array [
            2,
          ],
        },
      ],
      "2": Array [
        Object {
          "blockId": 2,
          "questions": Array [
            3,
          ],
        },
      ],
    },
    "assessmentCategory": undefined,
    "blocks": Object {
      "1": Object {
        "id": 1,
        "name": "Block1",
        "position": 1,
        "props": Object {
          "buttons": Object {
            "next_button": "Next",
            "prev_button": "Previous",
          },
          "randomization": Object {
            "type": "No",
          },
        },
        "questions": Array [
          1,
          2,
        ],
        "save_as_template": false,
        "template_id": null,
      },
      "2": Object {
        "id": 2,
        "name": "Block2",
        "position": 2,
        "props": Object {
          "buttons": Object {
            "next_button": "Next",
            "prev_button": "Previous",
          },
          "randomization": Object {
            "type": "No",
          },
        },
        "questions": Array [
          3,
        ],
        "save_as_template": false,
        "template_id": null,
      },
    },
    "currentElement": null,
    "currentPage": 0,
    "dashboardUrl": "/",
    "dataSheet": undefined,
    "dataSheetColumns": undefined,
    "dbResult": Object {
      "id": 1,
    },
    "elements": Array [
      Object {
        "elements": Array [],
        "path": Array [
          0,
        ],
        "props": Object {
          "current": "2",
        },
        "type": "Block",
      },
      Object {
        "elements": Array [],
        "path": Array [
          1,
        ],
        "props": Object {
          "storage": Array [
            Object {
              "key": "test",
              "value": "1",
            },
          ],
        },
        "type": "EmbeddedData",
      },
      Object {
        "elements": Array [
          Object {
            "elements": Array [],
            "path": Array [
              3,
              0,
            ],
            "props": Object {
              "current": "1",
            },
            "type": "Block",
          },
          Object {
            "elements": Array [],
            "path": Array [
              3,
              1,
            ],
            "props": Object {
              "current": "2",
            },
            "type": "Block",
          },
        ],
        "path": Array [
          3,
        ],
        "props": Object {
          "number": 2,
        },
        "type": "Randomizer",
      },
    ],
    "embeddedData": Object {},
    "enableBack": false,
    "enableProgress": true,
    "end": false,
    "errors": null,
    "expiryDate": undefined,
    "hideHiddenQuestions": true,
    "hrisData": Object {},
    "ignoreValidations": false,
    "initialized": true,
    "isAnonymousAssessment": undefined,
    "isThreesixty": undefined,
    "linear": false,
    "locales": undefined,
    "mediaUrl": "/assigns/1",
    "metaData": Object {},
    "normRules": Array [],
    "normalizedTree": Object {
      "0": Object {
        "path": Array [
          0,
        ],
        "props": Object {
          "current": "2",
        },
        "type": "Block",
      },
      "1": Object {
        "path": Array [
          1,
        ],
        "props": Object {
          "storage": Array [
            Object {
              "key": "test",
              "value": "1",
            },
          ],
        },
        "type": "EmbeddedData",
      },
      "2": Object {
        "path": Array [
          3,
        ],
        "props": Object {
          "number": 2,
        },
        "type": "Randomizer",
      },
      "2/0": Object {
        "path": Array [
          3,
          0,
        ],
        "props": Object {
          "current": "1",
        },
        "type": "Block",
      },
      "2/1": Object {
        "path": Array [
          3,
          1,
        ],
        "props": Object {
          "current": "2",
        },
        "type": "Block",
      },
    },
    "prevPages": Array [],
    "questions": Object {
      "1": Object {
        "block_id": 1,
        "display_logic": null,
        "id": 1,
        "name": "Q1",
        "position": 1,
        "props": Object {
          "choices": 2,
          "choicesTexts": Array [
            "Yes",
            "No",
          ],
          "defaultValues": Array [],
          "notApplicable": false,
          "notApplicableLabel": "Not Applicable",
          "position": "Vertical",
          "questionText": "Have you taken part in any extra-curricular activities in university?",
          "randomization": Object {
            "type": "No",
          },
          "type": "SingleAnswer",
        },
        "required_validation": Object {
          "enabled": false,
          "type": "Force",
        },
        "save_as_template": false,
        "skip_logic": Array [],
        "template_id": null,
        "type": "MultipleChoice",
        "validation": Object {
          "args": Object {},
          "type": "None",
        },
      },
      "2": Object {
        "block_id": 1,
        "display_logic": Object {
          "conditions": Array [
            Object {
              "conditions": Array [
                Object {
                  "answer": "0",
                  "conditionType": "Question",
                  "predicate": "Selected",
                  "prefix": "And",
                  "subject": 1,
                  "type": "bool",
                },
              ],
              "prefix": "And",
            },
          ],
        },
        "id": 2,
        "name": "Q3",
        "position": 2,
        "props": Object {
          "choices": 3,
          "choicesTexts": Array [
            "Click to write Choice 1",
            "Click to write Choice 2",
            "Click to write Choice 3",
          ],
          "defaultValues": Array [],
          "questionText": "Please specify",
          "randomization": Object {
            "type": "No",
          },
          "type": "DateEntry",
        },
        "required_validation": Object {
          "enabled": false,
          "type": "Force",
        },
        "save_as_template": false,
        "skip_logic": Array [],
        "template_id": null,
        "type": "TextEntry",
        "validation": Object {
          "args": Object {},
          "type": "None",
        },
      },
      "3": Object {
        "block_id": 2,
        "display_logic": null,
        "id": 3,
        "name": "Q2",
        "position": 1,
        "props": Object {
          "choices": 3,
          "choicesTexts": Array [
            "Click to write Choice 1",
            "Click to write Choice 2",
            "Click to write Choice 3",
          ],
          "defaultValues": Array [],
          "notApplicable": false,
          "notApplicableLabel": "Not Applicable",
          "position": "Vertical",
          "questionText": "Click to write the question text",
          "randomization": Object {
            "type": "No",
          },
          "type": "SingleAnswer",
        },
        "required_validation": Object {
          "enabled": false,
          "type": "Force",
        },
        "save_as_template": false,
        "skip_logic": Array [],
        "template_id": null,
        "type": "MultipleChoice",
        "validation": Object {
          "args": Object {},
          "type": "None",
        },
      },
    },
    "randomseed": 1,
    "readOnly": undefined,
    "relationship": undefined,
    "relationships": undefined,
    "results": Object {},
    "resultsUrl": undefined,
    "subjectDataSheet": undefined,
    "timerDuration": undefined,
    "type": "preview_assessment",
  },
  "survey": Object {
    "builder": Object {
      "assessment": Object {
        "blocks": Array [],
        "category": "",
        "disabled": false,
        "factors": Array [],
        "flow": null,
        "id": null,
        "loaded": false,
        "name": "",
        "norm_rules": Array [],
        "propPanel": Object {
          "offset": null,
          "question": null,
        },
        "relationships": Array [],
        "saving": false,
        "trash": Array [],
      },
      "blockCenter": Object {
        "saving": false,
      },
      "blocks": Object {},
      "factors": Object {
        "current": null,
        "factors": Object {},
        "recoding": Array [],
      },
      "flow": Object {
        "elements": Array [],
      },
      "questionCenter": Object {
        "disabled": false,
        "loaded": false,
        "question": null,
        "saving": false,
      },
      "questions": Object {},
    },
    "temp": Object {
      "hotSpot": Object {
        "shapeIndex": null,
      },
      "modals": Object {
        "current": Array [],
        "data": Object {},
      },
      "socket": Object {
        "initialized": null,
      },
    },
  },
}
`;

exports[`initializing base assessment middleware should call next if is not NEXT_PAGE: default_store 1`] = `
Object {
  "preview": Object {
    "allPages": Object {},
    "blocks": Object {},
    "currentElement": null,
    "currentPage": 0,
    "dashboardUrl": "/",
    "dataSheet": Array [],
    "dataSheetColumns": Array [],
    "elements": Array [],
    "embeddedData": Object {},
    "enableBack": false,
    "enableProgress": false,
    "end": false,
    "errors": null,
    "hideHiddenQuestions": true,
    "ignoreValidations": false,
    "initialized": false,
    "isThreesixty": false,
    "linear": false,
    "locales": null,
    "mediaUrl": null,
    "normalizedTree": Object {},
    "prevPages": Array [],
    "questions": Object {},
    "readOnly": false,
    "relationship": null,
    "relationships": Array [],
    "results": Object {},
    "subjectDataSheet": Array [],
    "type": "preview_assessment",
  },
  "survey": Object {
    "builder": Object {
      "assessment": Object {
        "blocks": Array [],
        "category": "",
        "disabled": false,
        "factors": Array [],
        "flow": null,
        "id": null,
        "loaded": false,
        "name": "",
        "norm_rules": Array [],
        "propPanel": Object {
          "offset": null,
          "question": null,
        },
        "relationships": Array [],
        "saving": false,
        "trash": Array [],
      },
      "blockCenter": Object {
        "saving": false,
      },
      "blocks": Object {},
      "factors": Object {
        "current": null,
        "factors": Object {},
        "recoding": Array [],
      },
      "flow": Object {
        "elements": Array [],
      },
      "questionCenter": Object {
        "disabled": false,
        "loaded": false,
        "question": null,
        "saving": false,
      },
      "questions": Object {},
    },
    "temp": Object {
      "hotSpot": Object {
        "shapeIndex": null,
      },
      "modals": Object {
        "current": Array [],
        "data": Object {},
      },
      "socket": Object {
        "initialized": null,
      },
    },
  },
}
`;
